src/styles/common.scss
// > Globals
body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
  -webkit-font-smoothing: antialiased;
  overflow: hidden;
}

// For vuetify
html {
  overflow: hidden !important;
}

:root {
  --usable-height: calc(100vh - 30px); /* height of the application area (window height minus titlebar height) */
  --container-height: calc(100vh - 104px);
}

// > Vuetify specific
// Height of the various nodes UI areas
.container {
  overflow: clip auto;
  height: var(--container-height);
}

// Colors to be made visible changing application theme
.green-label {
  color: light-dark(#2E7D32, #66BB6A) !important;
  opacity: 1 !important;
}

.yellow-title {
  color: light-dark(#F57F17, #FFF176) !important;
  opacity: 1 !important;
}

